force-app/main/default/objects/Wallet_Setting__c/Wallet_Setting__c.object-meta.xml
<CustomObject>
    <description>Apple Wallet Generator settings</description>
    <label>Wallet Setting</label>
    <nameField>
        <label>Wallet Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wallet Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>