force-app/main/default/objects/Wallet_Setting__c/fields/Apple_Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>Apple_Certificate_ID__c</fullName>
    <description>Content Document ID of Apple WWDR certificate</description>
    <label>Apple Certificate ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>