force-app/main/default/objects/Wallet_Setting__c/fields/EventStart__c.field-meta.xml
<CustomField>
    <fullName>EventStart__c</fullName>
    <label>Event Start</label>
    <type>DateTime</type>
</CustomField>