force-app/main/default/objects/Wallet_Setting__c/fields/Pass_Description__c.field-meta.xml
<CustomField>
    <fullName>Pass_Description__c</fullName>
    <description>Description of the pass; used by accessibility technologies</description>
    <label>Pass Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>