force-app/main/default/objects/Wallet_Setting__c/fields/Pass_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Pass_Identifier__c</fullName>
    <label>Pass Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>