force-app/main/default/objects/Wallet_Setting__c/fields/SignGeneratorAPIURL__c.field-meta.xml
<CustomField>
    <fullName>SignGeneratorAPIURL__c</fullName>
    <label>SignGeneratorAPIURL</label>
    <type>Url</type>
</CustomField>