force-app/main/default/objects/Wallet_Setting__c/fields/Team_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Team_Identifier__c</fullName>
    <label>Team Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>