force-app/main/default/objects/Wallet_Setting__c/fields/Wallet_Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Certificate_ID__c</fullName>
    <description>Content Document ID of the Wallet Certificate (Cert from Pass Type)</description>
    <label>Wallet Certificate ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>