force-app/main/default/objects/Wallet_Setting__c/fields/Wallet_Certificate_Password__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Certificate_Password__c</fullName>
    <description>Password for the Wallet Certificate</description>
    <label>Wallet Certificate Password</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>