force-app/main/default/objects/Wallet_Setting__c/fields/Wallet_Resources_ID__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Resources_ID__c</fullName>
    <description>Content Document ID of Wallet Resources (Content should be a Zip file containing all resources)</description>
    <label>Wallet Resources ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>